Add JWT authentication to private route on client side

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/istockphoto-477273563-612x612.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>WhereIsIt</title>
   </head>
   <body>
     <div id="root"></div>
